# yandex_finio

./: .gitignore  Cargo.toml  README.md  smoke.sh
examples/: sample.csv  sample.mt940
finio/: Cargo.toml
finio/src/: main.rs
finiolib/: Cargo.toml
finiolib/examples/: convert.rs
finiolib/src/: convert.rs  error.rs  lib.rs  model.rs  traits.rs
finiolib/src/formats/: camt053.rs  csv.rs  mt940.rs  xml.rs
finiolib/tests/: camt_writer_smoke.rs  mt940_smoke.rs  roundtrip_csv.rs  xml_smoke.rs
